--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ uvicorn==0.24.0
 python-dotenv==1.0.0
 pydantic==2.8.0
 twilio==9.0.4
-openai==1.3.7
+openai
 tiktoken==0.5.2
 networkx==3.2.1
 python-multipart
